--- a/AdvaMACSystem/AdvaMACSystem.csproj
+++ b/AdvaMACSystem/AdvaMACSystem.csproj
@@ -101,6 +101,9 @@
     <EmbeddedResource Include="mainForm.resx">
       <DependentUpon>mainForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PageViewDiagnose.resx">
+      <DependentUpon>PageViewDiagnose.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -116,6 +119,12 @@
     <Compile Include="UIControlbase.Designer.cs">
       <DependentUpon>UIControlbase.cs</DependentUpon>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ComCtrls\ComCtrls.csproj">
+      <Project>{1682E463-6EF1-49DA-B035-648379F21646}</Project>
+      <Name>ComCtrls</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.targets" />
   <ProjectExtensions>
