--- a/AdvaMACSystem/AdvaMACSystem.csproj
+++ b/AdvaMACSystem/AdvaMACSystem.csproj
@@ -57,6 +57,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdvaCanBus.cs" />
+    <Compile Include="AdvaMACSystemRes.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AdvaMACSystemRes.resx</DependentUpon>
+    </Compile>
     <Compile Include="AdvCan.cs" />
     <Compile Include="AdvCANIO.cs" />
     <Compile Include="CylinderCellBlock.cs">
@@ -103,6 +108,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AdvaMACSystemRes.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>AdvaMACSystemRes.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="CylinderCellBlock.resx">
       <DependentUpon>CylinderCellBlock.cs</DependentUpon>
     </EmbeddedResource>
@@ -139,6 +148,18 @@
       <Project>{5E8A714E-7AA1-41C4-8EE0-4D64438CFC8E}</Project>
       <Name>DataPool</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="MSYH.TTF" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\green-off.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\green-on.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\gray-off.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.targets" />
   <ProjectExtensions>
