--- a/AdvaMACSystem/AdvaMACSystem.csproj
+++ b/AdvaMACSystem/AdvaMACSystem.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{E027EF04-B15A-47D1-B7E7-364A558B7654}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -64,6 +64,12 @@
     </Compile>
     <Compile Include="AdvCan.cs" />
     <Compile Include="AdvCANIO.cs" />
+    <Compile Include="CPumpButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="CPumpButton.Designer.cs">
+      <DependentUpon>CPumpButton.cs</DependentUpon>
+    </Compile>
     <Compile Include="CylinderCellBlock.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -111,6 +117,9 @@
     <EmbeddedResource Include="AdvaMACSystemRes.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>AdvaMACSystemRes.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CPumpButton.resx">
+      <DependentUpon>CPumpButton.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CylinderCellBlock.resx">
       <DependentUpon>CylinderCellBlock.cs</DependentUpon>
@@ -184,6 +193,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\border_Disable.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pump.bmp" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.targets" />
   <ProjectExtensions>
