>故障页面的添加，未实现

--- a/AdvaMACSystem/AdvaMACSystem.csproj
+++ b/AdvaMACSystem/AdvaMACSystem.csproj
@@ -127,6 +127,9 @@
     <EmbeddedResource Include="PageViewDiagnose.resx">
       <DependentUpon>PageViewDiagnose.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PageViewError.resx">
+      <DependentUpon>PageViewError.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PageViewMAC.resx">
       <DependentUpon>PageViewMAC.cs</DependentUpon>
     </EmbeddedResource>
