--- a/AdvaMACSystem_Win32/AdvaMACSystem_Win32.csproj
+++ b/AdvaMACSystem_Win32/AdvaMACSystem_Win32.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{7122CC06-1754-4B27-A7A0-D1D29633730A}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -51,6 +51,9 @@
     <Compile Include="..\AdvaMACSystem\AdvaCanBus.cs">
       <Link>AdvaCanBus.cs</Link>
     </Compile>
+    <Compile Include="..\AdvaMACSystem\AdvaMACSystemRes.Designer.cs">
+      <Link>AdvaMACSystemRes.Designer.cs</Link>
+    </Compile>
     <Compile Include="..\AdvaMACSystem\AdvCan.cs">
       <Link>AdvCan.cs</Link>
     </Compile>
@@ -81,8 +84,17 @@
       <Link>PageViewDiagnose.designer.cs</Link>
       <DependentUpon>PageViewDiagnose.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\AdvaMACSystem\PageViewError.cs">
+      <Link>PageViewError.cs</Link>
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="..\AdvaMACSystem\PageViewError.designer.cs">
+      <Link>PageViewError.designer.cs</Link>
+      <DependentUpon>PageViewError.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\AdvaMACSystem\PageViewHistory.cs">
       <Link>PageViewHistory.cs</Link>
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="..\AdvaMACSystem\PageViewHistory.designer.cs">
       <Link>PageViewHistory.designer.cs</Link>
@@ -90,6 +102,7 @@
     </Compile>
     <Compile Include="..\AdvaMACSystem\PageViewMAC.cs">
       <Link>PageViewMAC.cs</Link>
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="..\AdvaMACSystem\PageViewMAC.designer.cs">
       <Link>PageViewMAC.designer.cs</Link>
@@ -97,6 +110,7 @@
     </Compile>
     <Compile Include="..\AdvaMACSystem\PageViewParameter.cs">
       <Link>PageViewParameter.cs</Link>
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="..\AdvaMACSystem\PageViewParameter.designer.cs">
       <Link>PageViewParameter.designer.cs</Link>
@@ -104,6 +118,7 @@
     </Compile>
     <Compile Include="..\AdvaMACSystem\PageViewWarn.cs">
       <Link>PageViewWarn.cs</Link>
+      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="..\AdvaMACSystem\PageViewWarn.designer.cs">
       <Link>PageViewWarn.designer.cs</Link>
@@ -117,8 +132,14 @@
       <Link>UIControlbase.designer.cs</Link>
       <DependentUpon>UIControlbase.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\AdvaMACSystem\WarnErrOperator.cs">
+      <Link>WarnErrOperator.cs</Link>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="..\AdvaMACSystem\AdvaMACSystemRes.resx">
+      <Link>AdvaMACSystemRes.resx</Link>
+    </EmbeddedResource>
     <EmbeddedResource Include="..\AdvaMACSystem\CylinderCellBlock.resx">
       <Link>CylinderCellBlock.resx</Link>
       <DependentUpon>CylinderCellBlock.cs</DependentUpon>
@@ -130,6 +151,10 @@
     <EmbeddedResource Include="..\AdvaMACSystem\PageViewDiagnose.resx">
       <Link>PageViewDiagnose.resx</Link>
       <DependentUpon>PageViewDiagnose.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\AdvaMACSystem\PageViewError.resx">
+      <Link>PageViewError.resx</Link>
+      <DependentUpon>PageViewError.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
