--- a/AdvaMACSystem/AdvaMACSystem.csproj
+++ b/AdvaMACSystem/AdvaMACSystem.csproj
@@ -67,7 +67,7 @@
     <Compile Include="CPumpButton.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="CPumpButton.Designer.cs">
+    <Compile Include="CPumpButton.designer.cs">
       <DependentUpon>CPumpButton.cs</DependentUpon>
     </Compile>
     <Compile Include="CylinderCellBlock.cs">
@@ -197,33 +197,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\yellowbar.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\border.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\border_Disable.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\pump.bmp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\MAC_disable.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\MAC_down.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\MAC_up.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\pumpborder.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\pumpborder_checked.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\pumpborder_disable.png" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.targets" />
   <ProjectExtensions>
