--- a/AdvaMACSystem/AdvaMACSystem.csproj
+++ b/AdvaMACSystem/AdvaMACSystem.csproj
@@ -213,6 +213,15 @@
   <ItemGroup>
     <None Include="Resources\IOred.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Dgn_disable.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Dgn_down.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Dgn_up.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
