--- a/AdvaMACSystem_Win32/AdvaMACSystem_Win32.csproj
+++ b/AdvaMACSystem_Win32/AdvaMACSystem_Win32.csproj
@@ -60,6 +60,14 @@
     <Compile Include="..\AdvaMACSystem\AdvCANIO.cs">
       <Link>AdvCANIO.cs</Link>
     </Compile>
+    <Compile Include="..\AdvaMACSystem\CParaLabel.cs">
+      <Link>CParaLabel.cs</Link>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="..\AdvaMACSystem\CParaLabel.designer.cs">
+      <Link>CParaLabel.designer.cs</Link>
+      <DependentUpon>CParaLabel.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\AdvaMACSystem\CPumpButton.cs">
       <Link>CPumpButton.cs</Link>
       <SubType>Component</SubType>
