--- a/ComCtrls/ComCtrls.csproj
+++ b/ComCtrls/ComCtrls.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{1682E463-6EF1-49DA-B035-648379F21646}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -56,6 +56,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="KeypadForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KeypadForm.Designer.cs">
+      <DependentUpon>KeypadForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ProgressBar.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -83,6 +89,9 @@
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="KeypadForm.resx">
+      <DependentUpon>KeypadForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ProgressBar.resx">
       <DependentUpon>ProgressBar.cs</DependentUpon>
       <SubType>Designer</SubType>
