>修改历史记录显示模块，加入图表显示

--- a/AdvaMACSystem/AdvaMACSystem.csproj
+++ b/AdvaMACSystem/AdvaMACSystem.csproj
@@ -146,6 +146,9 @@
     <EmbeddedResource Include="PageViewError.resx">
       <DependentUpon>PageViewError.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PageViewHistory.resx">
+      <DependentUpon>PageViewHistory.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PageViewMAC.resx">
       <DependentUpon>PageViewMAC.cs</DependentUpon>
     </EmbeddedResource>
