>工程文件的同步

--- a/AdvaMACSysUpdater/AdvaMACSysUpdater.csproj
+++ b/AdvaMACSysUpdater/AdvaMACSysUpdater.csproj
@@ -13,7 +13,8 @@
     <PlatformFamilyName>WindowsCE</PlatformFamilyName>
     <PlatformID>E2BECB1F-8C8C-41ba-B736-9BE7D946A398</PlatformID>
     <OSVersion>5.0</OSVersion>
-    <DeployDirSuffix>AdvaMACSysUpdater</DeployDirSuffix>
+    <DeployDirSuffix>
+    </DeployDirSuffix>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <NativePlatformName>Windows CE</NativePlatformName>
     <FormFactorID>
