--- a/ComCtrls_Win32/ComCtrls.csproj
+++ b/ComCtrls_Win32/ComCtrls.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{C4925C4D-75BF-4A56-950A-12CB6F369C39}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -63,6 +63,14 @@
       <Link>ImageLabel.designer.cs</Link>
       <DependentUpon>ImageLabel.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\ComCtrls\ImagesContaner.cs">
+      <Link>ImagesContaner.cs</Link>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="..\ComCtrls\ImagesContaner.designer.cs">
+      <Link>ImagesContaner.designer.cs</Link>
+      <DependentUpon>ImagesContaner.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\ComCtrls\KeypadForm.cs">
       <Link>KeypadForm.cs</Link>
       <SubType>Form</SubType>
@@ -81,6 +89,14 @@
     </Compile>
     <Compile Include="..\ComCtrls\Resource1.Designer.cs">
       <Link>Resource1.Designer.cs</Link>
+    </Compile>
+    <Compile Include="..\ComCtrls\SimpleImagesContaner.cs">
+      <Link>SimpleImagesContaner.cs</Link>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="..\ComCtrls\SimpleImagesContaner.designer.cs">
+      <Link>SimpleImagesContaner.designer.cs</Link>
+      <DependentUpon>SimpleImagesContaner.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
