--- a/AdvaMACSystem/AdvaMACSystem.csproj
+++ b/AdvaMACSystem/AdvaMACSystem.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{E027EF04-B15A-47D1-B7E7-364A558B7654}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -277,6 +277,30 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\input.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\half_disable.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\half_down.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\half_up.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\leftdown.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\leftup.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rightdown.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rightup.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Input80x40.png" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.targets" />
   <ProjectExtensions>
