--- a/AdvaMACSystem/AdvaMACSystem.csproj
+++ b/AdvaMACSystem/AdvaMACSystem.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{E027EF04-B15A-47D1-B7E7-364A558B7654}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -191,6 +191,9 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="VirtualSetForm.resx">
+      <DependentUpon>VirtualSetForm.cs</DependentUpon>
+    </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
@@ -200,6 +203,12 @@
     </Compile>
     <Compile Include="UIControlbase.Designer.cs">
       <DependentUpon>UIControlbase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="VirtualSetForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VirtualSetForm.Designer.cs">
+      <DependentUpon>VirtualSetForm.cs</DependentUpon>
     </Compile>
     <Compile Include="WarnErrOperator.cs" />
   </ItemGroup>
