--- a/AdvaMACSystem_Win32/AdvaMACSystem_Win32.csproj
+++ b/AdvaMACSystem_Win32/AdvaMACSystem_Win32.csproj
@@ -175,6 +175,14 @@
       <Link>UIControlbase.designer.cs</Link>
       <DependentUpon>UIControlbase.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\AdvaMACSystem\VirtualSetForm.cs">
+      <Link>VirtualSetForm.cs</Link>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="..\AdvaMACSystem\VirtualSetForm.designer.cs">
+      <Link>VirtualSetForm.designer.cs</Link>
+      <DependentUpon>VirtualSetForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\AdvaMACSystem\WarnErrOperator.cs">
       <Link>WarnErrOperator.cs</Link>
     </Compile>
@@ -230,6 +238,10 @@
     <EmbeddedResource Include="..\AdvaMACSystem\PageViewWarn.resx">
       <Link>PageViewWarn.resx</Link>
       <DependentUpon>PageViewWarn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\AdvaMACSystem\VirtualSetForm.resx">
+      <Link>VirtualSetForm.resx</Link>
+      <DependentUpon>VirtualSetForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
