>修正了标定界面进入的异常 >主窗体风格的更新： 1.菜单栏-删除 2.状态栏高度减小了 3.状态栏的显示做了调整：删除了工程名称、工程编号；历史数据、参数、诊断通过新加的图标进入 4.目前设计是5个图标：历史、报警、故障、参数、诊断 5.后续实现：进入参数界面后，再切换安装设定和传感器标定；进入报警显示 当前报警，再切换到历史；故障也一样

--- a/AdvaMACSystem/AdvaMACSystem.csproj
+++ b/AdvaMACSystem/AdvaMACSystem.csproj
@@ -148,7 +148,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AdvaMACSystemRes.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>AdvaMACSystemRes.Designer.cs</LastGenOutput>
+      <LastGenOutput>AdvaMACSystemRes1.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="CPumpButton.resx">
       <DependentUpon>CPumpButton.cs</DependentUpon>
@@ -301,6 +301,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Input80x40.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fix2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\warning2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\history_64.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\config64.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\settings64.png" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.targets" />
   <ProjectExtensions>
