>实现了图标的页面入口方式，并且实现了不同页面之间的直接切换（先返回到mac界面，再进入相应页面） >整理了页面标题的显示，给参数、报警和故障添加了子菜单切换 >菜单结构  参数：安装设定-参数设定-传感器标定  报警：实时数据-历史数据  故障：实时数据-历史数据  诊断：IO诊断

--- a/AdvaMACSystem/AdvaMACSystem.csproj
+++ b/AdvaMACSystem/AdvaMACSystem.csproj
@@ -317,6 +317,18 @@
   <ItemGroup>
     <None Include="Resources\settings64.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fix2_gray.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\warning2_gray.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Menu.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Menu_disable.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
