>对参数界面中的按钮做了美化

--- a/AdvaMACSystem/AdvaMACSystem.csproj
+++ b/AdvaMACSystem/AdvaMACSystem.csproj
@@ -329,6 +329,9 @@
   <ItemGroup>
     <None Include="Resources\Menu_disable.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\LightOnRed100.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
