>修改了以下内容 1、增加开机界面 1）文字：“欢迎使用HIS0350A钢支撑轴力补偿系统”； 2）图幅：宏信设备LOGO, 2、主界面改进 1）自动模式和手动模式切换时，弹出“确认”框，以防误按； 2）在“自动模式”按钮后，增加两个个按钮“启动泵站”、“泵站设置”；   说明：a、如当前泵站已启动（判断标准：泵站压力>20bar），则“启动泵站”按钮不可用；         B、泵站设置按钮点击后，弹出输入框，可输入0~4000范围的数字，并将此数值发给控制器，地址为ID:2005, BYTE: 5,6 3）在“自动模式下”，“启动泵站”、“泵站设置”“油缸伸出”“油缸缩回”按钮不可用； 4）HIS0350A钢支撑轴力补偿系统，分两行显示，上行“HIS0350A”，下行“钢支撑轴力补偿系统” 5）“日期:”和“时间：”两个文字说明可以不要；

--- a/AdvaMACSystem/AdvaMACSystem.csproj
+++ b/AdvaMACSystem/AdvaMACSystem.csproj
@@ -191,9 +191,18 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="SplashForm.resx">
+      <DependentUpon>SplashForm.cs</DependentUpon>
+    </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="SplashForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SplashForm.Designer.cs">
+      <DependentUpon>SplashForm.cs</DependentUpon>
     </Compile>
     <Compile Include="UIControlbase.cs">
       <SubType>UserControl</SubType>
@@ -331,6 +340,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\LightOnRed100.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Logo_big.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\LogoBack.png" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.targets" />
   <ProjectExtensions>
