>在安装设定界面为每个油缸增加确定按钮，按下按钮表示该油缸配置完成；总的安装调试到位按钮取消(不含逻辑)

--- a/AdvaMACSystem/AdvaMACSystem.csproj
+++ b/AdvaMACSystem/AdvaMACSystem.csproj
@@ -367,6 +367,15 @@
   <ItemGroup>
     <None Include="Resources\estop64.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Set_disable.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Set_down.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Set_up.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
