--- a/AdvaMACSystem/AdvaMACSystem.csproj
+++ b/AdvaMACSystem/AdvaMACSystem.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{E027EF04-B15A-47D1-B7E7-364A558B7654}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -126,6 +126,12 @@
     <Compile Include="PageViewPara.Designer.cs">
       <DependentUpon>PageViewPara.cs</DependentUpon>
     </Compile>
+    <Compile Include="PageViewPara_Cylinder.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="PageViewPara_Cylinder.Designer.cs">
+      <DependentUpon>PageViewPara_Cylinder.cs</DependentUpon>
+    </Compile>
     <Compile Include="PageViewPara_Sensor.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -186,6 +192,9 @@
     <EmbeddedResource Include="PageViewPara.resx">
       <DependentUpon>PageViewPara.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PageViewPara_Cylinder.resx">
+      <DependentUpon>PageViewPara_Cylinder.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PageViewPara_Sensor.resx">
       <DependentUpon>PageViewPara_Sensor.cs</DependentUpon>
