--- a/AdvaMACSystem/AdvaMACSystem.csproj
+++ b/AdvaMACSystem/AdvaMACSystem.csproj
@@ -65,6 +65,12 @@
     </Compile>
     <Compile Include="AdvCan.cs" />
     <Compile Include="AdvCANIO.cs" />
+    <Compile Include="FileCpyForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FileCpyForm.Designer.cs">
+      <DependentUpon>FileCpyForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormTimeSetting.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -164,6 +170,9 @@
     <EmbeddedResource Include="CylinderCellBlock.resx">
       <DependentUpon>CylinderCellBlock.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FileCpyForm.resx">
+      <DependentUpon>FileCpyForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormTimeSetting.resx">
       <DependentUpon>FormTimeSetting.cs</DependentUpon>
