>修正了一个异常，当连接了第四个设备（即泵站）时，在canread函数的3101-3108数据读取中，下面语句报了异常 CanDatapool.in_Position_Real_3101_3108[(int)(Idx_Pump * 8 + Idx_Cylinder + 2)] =                                                (vs_High | vs_low); 由于其之前的Idx_Cylinder = 2 + (((idArray0 % 2) == 0) ? 4 : 0);类似语句导致了数组的访问越界。
例如3*8+（3+4）+2=33超过了32 个数组长度

--- a/AdvaMACSystem_Win32/AdvaMACSystem_Win32.csproj
+++ b/AdvaMACSystem_Win32/AdvaMACSystem_Win32.csproj
@@ -84,6 +84,14 @@
       <Link>CylinderCellBlock.designer.cs</Link>
       <DependentUpon>CylinderCellBlock.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\AdvaMACSystem\FileCpyForm.cs">
+      <Link>FileCpyForm.cs</Link>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="..\AdvaMACSystem\FileCpyForm.designer.cs">
+      <Link>FileCpyForm.designer.cs</Link>
+      <DependentUpon>FileCpyForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\AdvaMACSystem\FormTimeSetting.cs">
       <Link>FormTimeSetting.cs</Link>
       <SubType>Form</SubType>
@@ -214,6 +222,10 @@
     <EmbeddedResource Include="..\AdvaMACSystem\CylinderCellBlock.resx">
       <Link>CylinderCellBlock.resx</Link>
       <DependentUpon>CylinderCellBlock.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\AdvaMACSystem\FileCpyForm.resx">
+      <Link>FileCpyForm.resx</Link>
+      <DependentUpon>FileCpyForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="..\AdvaMACSystem\FormTimeSetting.resx">
       <Link>FormTimeSetting.resx</Link>
